# LabEngSof

./: .gitignore  README.md
receitaria1.61/: pyproject.toml
receitaria1.61/receitaria1_61/: app.py
receitaria1.61/receitaria1_61/templates/: index.html
receitaria1.61/tests/: test_receitaria1_61.py
receitaria1_61/: Procfile  config.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
receitaria1_61/migrations/versions/: b80b6b4c6360_.py  ba76978e7ae7_.py  f86208bde25a_.py
receitaria1_61/receitaria1_61/: __init__.py  app.py  config.py  db.py  storage.db
receitaria1_61/receitaria1_61/controllers/: forms.py  urls.py
receitaria1_61/receitaria1_61/models/: tables.py
receitaria1_61/receitaria1_61/templates/: change_ingrediente.html  change_unidade.html  change_user.html  create_user.html  index.html  ingredientes.html  login.html  novareceita.html  novaunidade.html  novo.html  novoingrediente.html  receita.html  receita_ingrediente.html  template.html  unidades.html
receitaria1_61/tests/: test_receitaria1_61.py
