[tool.poetry]
name = "receitaria1_61"
version = "0.1.0"
description = ""
authors = ["Pedro Henrique Fernandes <pedro.fernandes@znc.com.br>"]

[tool.poetry.dependencies]
python = "^3.5"
Flask = "^1.1.2"
coverage = "^5.5"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.0.4"
pytest-flask = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
